--- a/IapExample/package.json
+++ b/IapExample/package.json
@@ -6,7 +6,7 @@
     "android:play": "react-native run-android --variant=GooglePlayDebug",
     "android:amazon": "react-native run-android --variant=AmazonDebug",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "react-native start --reset-cache",
     "pods": "cd ios && pod install",
     "test": "jest"
   },
@@ -16,22 +16,22 @@
     "@react-navigation/native": "6.1.6",
     "@react-navigation/stack": "6.3.16",
     "lodash": "4.17.21",
-    "react": "17.0.2",
-    "react-native": "0.69.1",
+    "react": "18.2.0",
+    "react-native": "0.69.12",
     "react-native-gesture-handler": "2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "3.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.23.0",
+    "@babel/runtime": "^7.23.1",
     "@types/lodash": "4.14.191",
     "@types/react": "*",
     "@types/react-native": "*",
     "babel-jest": "^29.0.0",
     "babel-plugin-module-resolver": "5.0.0",
     "jest": "^29.0.0",
-    "metro-react-native-babel-preset": "^0.76.0",
+    "metro-react-native-babel-preset": "^0.76.8",
     "react-test-renderer": "18.2.0"
   },
   "resolutions": {
